[package]
name = "neon-randomstring"
version = "0.1.0"
authors = ["Artur Aralin <artur.aralin97@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_randomstring"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.10.1"
rand = "0.7.3"
